<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <!-- Categories, should appear as action button -->
    <item android:id="@+id/action_categories"
          android:icon="@drawable/ic_drawer"
          android:title="@string/action_categories"
          android:showAsAction="ifRoom" />
    
    <!-- Camera, should appear as action button -->
    <item android:id="@+id/action_camera"
          android:icon="@drawable/ic_action_camera"
          android:title="@string/action_photo"
          android:showAsAction="ifRoom" />
    
    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_settings"
          android:title="@string/action_settings"
          android:showAsAction="never" />
    
    <item android:id="@+id/action_logout"
          android:title="@string/action_logout"
          android:showAsAction="never" />
</menu>