<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCF8C7"
    android:orientation="vertical"
    android:padding="10dip" >

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="50dp"
        android:background="#ffffff"
        android:hint="@string/username_hint"
        android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="#ffffff"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:singleLine="true" />

    <EditText
        android:id="@+id/txtEmail"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dp"
        android:background="#ffffff"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="true" />

    <TextView
        android:id="@+id/txtSignUpError"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip"
        android:singleLine="true"
        android:textColor="#E00724" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff7800"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textStyle="bold" />

</LinearLayout>