<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCF8C7"
    android:orientation="vertical"
    android:padding="10dip" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="200dp"
        android:src="@drawable/ic_launcher" />

    <EditText
        android:id="@+id/txtUsername"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="5dip"
        android:layout_marginTop="5dp"
        android:background="#ffffff"
        android:hint="@string/username_hint"
        android:inputType="textCapSentences"
        android:singleLine="true" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="10dip"
        android:background="#ffffff"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:singleLine="true" />

    <TextView
        android:id="@+id/txtLoginError"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FCF8C7"
        android:textColor="#FF0000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#ffa200"
        android:text="@string/login"
        android:textColor="#ffffff"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnSignUp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#ffa200"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        android:textStyle="bold" />

</LinearLayout>